--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.11.1",
+    "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
   },
   "babel": {
-        "presets": ["es2015"],
-        "plugins": ["transform-runtime", "transform-object-rest-spread"]
-    },
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "transform-runtime",
+      "transform-object-rest-spread"
+    ]
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
